overlays/develop/genkohoshu-01/b/i-kokyaku1/i-kokyaku1-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: i-kokyaku1
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
