overlays/develop/genkohoshu-01/b/i-kokyaku1/i-kokyaku1-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: i-kokyaku1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bgd
---
