overlays/develop/genkohoshu-01/b/i-kokyaku1/i-kokyaku1-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: kokyaku
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
